--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -16,7 +16,7 @@
           <label class="col-sm-2 col-form-label">Deadline</label>
           <div class="col-sm-10">
             <div class="input-group-date" id="datepicker">
-              <input type="datetime" class="form-control" name="deadline" id="datepicker"
+              <input type="datetime-local" class="form-control" name="deadline" id="datepicker"
                 value="<%= moment(data[0].deadline).format('YYYY-MM-DD HH:mm')%>" required>
             </div>
           </div>
