--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header')%>
+<div class="container-md rounded-2 mt-2">
   <div class="card">
     <div class="container-ava bg-light">
       <div class="item-ava">
@@ -144,6 +145,7 @@
         <button class="btn btn-primary" type="button"><i class="fa-solid fa-plus"></i></button>
       </a>
     </div>
+  </div>
   </div>
   </div>
   <%- include('partials/delete-confirm')%>
