--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,14 +25,20 @@ a {
 .container-ava {
   border-bottom: 1px solid rgb(202, 202, 202);
   border-radius: 5px 5px 0px 0px;
-  background-color: aqua;
   padding-bottom: -90px !important;
 }
 
 .ava {
   display: flex;
+  flex-direction: row;
   align-items: center;
   gap: 30px;
+}
+
+.ava a {
+  display: flex;
+  height: 50%;
+  flex-direction: row;
 }
 
 .avatar {
@@ -41,6 +47,8 @@ a {
   height: 50px;
   border-radius: 50%;
   margin-left: 10px;
+  overflow: hidden;
+  z-index: 100;
 }
 
 .btn-out {
@@ -50,9 +58,10 @@ a {
   margin-right: 10px;
 }
 
-.item.ava {
-  transform: translateY(1em);
+.item-ava {
+  transform: translateY(1em);  
 }
+
 #notif {
   position: fixed;
   display: none;
@@ -174,3 +183,4 @@ display: flex;
 flex-direction: row;
 margin-right: 15px;
 }
+
