--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -184,3 +184,47 @@ flex-direction: row;
 margin-right: 15px;
 }
 
+.pagination {
+  float: right;
+  display: flex;
+  padding: 10px 10px 10px 10px;
+  margin-top: -10px;
+  border-top-left-radius: 4px;
+}
+
+.pagination a {
+  color: #0C6DFD;
+  float: left;
+  text-decoration: none;
+  padding: 5px 8px;
+  border: 1px solid #ddd;
+  background-color: white;
+}
+
+.pagination a:hover {
+  background-color: #f7f4f4;
+}
+
+.pagination a:first-child {
+  background-color: white;
+  color: #0C6DFD;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border: 1px solid #ddd;
+  border-right: none;
+}
+
+.pagination a.active {
+  background-color: #0C6DFD;
+  color: white;
+  border: 1px solid #0C6DFD;
+}
+
+.pagination a:last-child {
+  background-color: white;
+  color: #0C6DFD;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border: 1px solid #ddd;
+  border-left: none;
+}
