--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,156 +1,193 @@
-  <%- include('partials/header')%>
-    <div class="container-md rounded-2 mt-2">
-      <div class="card">
-        <div class="container-ava bg-light">
-          <div class="item-ava">
-            <div class="ava">
-              <a href="users/upload"><img src="<%= profil.avatar ? `/images/${profil.avatar}` : `../images/avatar.png` %>"
-                  alt="avatar" class="avatar"></a>
-              <h2>
-                <%= profil.email%>
-              </h2>
-            </div>
-            <div class="btn-out">
-              <div class="position-relative">
-                <a href="/">
-                  <button type="button" class="btn btn-secondary"><i class="fa-solid fa-right-from-bracket"></i>Sign
-                    Out</button>
-                </a>
-              </div>
+<%- include('partials/header')%>
+  <div class="container-md rounded-2 mt-2">
+    <div class="card">
+      <div class="container-ava bg-light">
+        <div class="item-ava">
+          <div class="ava">
+            <a href="users/upload"><img src="<%= profil.avatar ? `/images/${profil.avatar}` : `../images/avatar.png` %>"
+                alt="avatar" class="avatar"></a>
+            <h2>
+              <%= profil.email%>
+            </h2>
+          </div>
+          <div class="btn-out">
+            <div class="position-relative">
+              <a href="/">
+                <button type="button" class="btn btn-secondary"><i class="fa-solid fa-right-from-bracket"></i>Sign
+                  Out</button>
+              </a>
             </div>
           </div>
         </div>
-        <div class="card-header head-idx">
-          <div class="head">
-            <h1 class="text-center">PostgreSQL Breads(Browse,Read,Edit,Add,Delete,Sort)</h1>
-          </div>
+      </div>
+      <div class="card-header head-idx">
+        <div class="head">
+          <h1 class="text-center">PostgreSQL Breads(Browse,Read,Edit,Add,Delete,Sort)</h1>
         </div>
-        <div class="card-body ">
-          <form action="" method="post">
-            <div class="row mb-3">
-              <label for="tittle" class="col-sm-2 col-form-label">Tittle</label>
-              <div class="col-sm-10">
-                <input type="tittle" class="form-control" id="tittle" placeholder="insert your tittle" />
-              </div>
+      </div>
+      <div class="card-body ">
+        <form action="" method="post">
+          <div class="row mb-2">
+            <label for="title" class="col-sm-2 col-form-label">Title</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="title" name="title" title="title" placeholder="insert your title"
+                value="<%= query.title %>">
             </div>
-            <div class="row mb-1">
-              <label for="startdate" class="col-sm-2 col-form-label">Deadline</label>
-              <div class="col-sm-4">
-                <input type="date" class="form-control" name="startdate">
-              </div>
-              <label for="enddate" class="col-sm-2 col-form-label">
-                <p class="into">s.d.</p>
-              </label>
-              <div class="col-sm-4">
-                <input type="date" class="form-control" name="enddate">
-              </div>
+          </div>
+          <div class="row mb-1">
+            <label for="startdate" class="col-sm-2 col-form-label">Deadline</label>
+            <div class="col-sm-4">
+              <input type="date" class="form-control" name="startdate">
             </div>
-            <div class="row mb-3">
-              <label for="complete" class="col-sm-2 col-form-label">Complete</label>
-              <div class="col-sm-10">
-                <select class="form-select" aria-label="Default select example">
-                  <option selected>-select complete-</option>
-                  <option value="1">done</option>
-                  <option value="2">not yet</option>
-                </select>
-              </div>
-              <div class="row mb-3 op">
-                <label for="operation" class="col-sm-2 pt-0">Operation</label>
+            <label for="enddate" class="col-sm-2 col-form-label">
+              <p class="into">s.d.</p>
+            </label>
+            <div class="col-sm-4">
+              <input type="date" class="form-control" name="enddate">
+            </div>
+          </div>
+          <div class="row mb-3">
+            <label for="complete" class="col-sm-2 col-form-label">Complete</label>
+            <div class="col-sm-10">
+              <select class="form-select" aria-label="Default select example">
+                <option selected>-select complete-</option>
+                <option value="1">done</option>
+                <option value="2">not yet</option>
+              </select>
+            </div>
+            <div class="op">
+              <fieldset class="row mb-3">
+                <legend class="col-form-label col-sm-2 pt-0">Operation</legend>
                 <div class="col-sm-10 rad-list">
+                  <% if (query.operator == 'OR') { %>
                   <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
+                    <input class="form-check-input" type="radio" name="operator" id="or" value="OR"
+                      checked>
+                    <label class="form-check-label" for="or">
                       OR
                     </label>
                   </div>
                   <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                    <label class="form-check-label" for="flexRadioDefault2">
+                    <input class="form-check-input" type="radio" name="operator" id="and" value="AND">
+                    <label class="form-check-label" for="and">
                       AND
                     </label>
                   </div>
+                  <% } else if (query.operator == 'AND') { %>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="operator" id="or" value="OR"
+                        >
+                      <label class="form-check-label" for="or">
+                        OR
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="operator" id="and" value="AND" checked>
+                      <label class="form-check-label" for="and">
+                        AND
+                      </label>
+                    </div>
+                    <% } else { %>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="operator" id="or" value="OR"
+                          checked>
+                        <label class="form-check-label" for="or">
+                          OR
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="operator" id="and" value="AND">
+                        <label class="form-check-label" for="and">
+                          AND
+                        </label>
+                      </div>
+                      <% } %>
                 </div>
-              </div>
+              </fieldset>
             </div>
-            <div class="btn-group-search">
-              <button type="button" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
-              <button type="button" class="btn btn-warning"><i class="fa-solid fa-rotate-left"></i></button>
+          <div class="btn-group-search">
+            <div class="formBtm">
+              <button class="btn btn-primary" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+              <a href="/users">
+                <button class="btn btn-warning" type="button"><i class="fa-solid fa-arrows-rotate"></i></button>
+              </a>
             </div>
-        </div>
-        </form>
-        <div class="line"></div>
-        <div class="tab-list">
-          <table class="table table-striped">
-            <tr>
-              <th>No.</th>
-              <th><i class="fa-solid fa-sort"></i> Title</th>
-              <th><i class="fa-solid fa-sort"></i> Complete</th>
-              <th><i class="fa-solid fa-sort"></i> Deadline</th>
-              <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-              <%data.forEach((item,index)=>{ %>
-                <%if(new Date(`${item.deadline}`)< new Date()&& !item.complete){ %>
+          </div>
+      </div>
+      </form>
+      <div class="line"></div>
+      <div class="tab-list">
+        <table class="table table-striped">
+          <tr>
+            <th>No.</th>
+            <th><i class="fa-solid fa-sort"></i> Title</th>
+            <th><i class="fa-solid fa-sort"></i> Complete</th>
+            <th><i class="fa-solid fa-sort"></i> Deadline</th>
+            <th>Actions</th>
+          </tr>
+          </thead>
+          <tbody>
+            <%data.forEach((item,index)=>{ %>
+              <%if(new Date(`${item.deadline}`)< new Date()&& !item.complete){ %>
+                <tr>
+                  <td style="background-color: #F75352; color: white;">
+                    <%= index +1 + offset%>
+                  </td>
+                  <td style="background-color: #F75352; color: white;">
+                    <%= item.title %>
+                  </td>
+                  <td style="background-color: #F75352; color: white;">
+                    <%= item.complete ? "Done" : "Not Yet" %>
+                  </td>
+                  <td style="background-color: #F75352; color: white;">
+                    <%= moment(item.deadline).format(" DD MMM YYYY HH:mm")%>
+                  </td>
+                  <td style="background-color: #F75352; color: white;">
+                    <a href="/users/edit/<%= item.id%> " class="btn btn-success update"><i
+                        class="fa-solid fa-pencil"></i></a>&nbsp <a href="/users/delete/<%= item.id%>"
+                      class="btn btn-danger delete" onclick="return on(`<%= item.id%>` , `<%= item.title%>`)"><i
+                        class="fa-solid fa-trash"></i></a>
+
+                  </td>
+
+                </tr>
+                <%} else {%>
                   <tr>
-                    <td style="background-color: #F75352; color: white;">
+                    <td>
                       <%= index +1 + offset%>
                     </td>
-                    <td style="background-color: #F75352; color: white;">
+                    <td>
                       <%= item.title %>
                     </td>
-                    <td style="background-color: #F75352; color: white;">
+                    <td>
                       <%= item.complete ? "Done" : "Not Yet" %>
                     </td>
-                    <td style="background-color: #F75352; color: white;">
+                    <td>
                       <%= moment(item.deadline).format(" DD MMM YYYY HH:mm")%>
                     </td>
-                    <td style="background-color: #F75352; color: white;">
-                      <a href="/users/edit/<%= item.id%> " class="btn btn-success update"><i
-                          class="fa-solid fa-pencil"></i></a>&nbsp <a href="/users/delete/<%= item.id%>"
-                        class="btn btn-danger delete" onclick="return on(`<%= item.id%>` , `<%= item.title%>`)"><i
-                          class="fa-solid fa-trash"></i></a>
+                    <td>
+                      <a href="/users/edit/<%= item.id%> " class="btn btn-success "><i
+                          class="fa-solid fa-pencil"></i></a>&nbsp
+                      <a href="/users/delete/<%= item.id%>" class="btn btn-danger"
+                        onclick="return on(`<%= item.id%>` , `<%= item.title%>`)"><i class="fa-solid fa-trash"></i></a>
 
                     </td>
 
                   </tr>
-                  <%} else {%>
-                    <tr>
-                      <td>
-                        <%= index +1 + offset%>
-                      </td>
-                      <td>
-                        <%= item.title %>
-                      </td>
-                      <td>
-                        <%= item.complete ? "Done" : "Not Yet" %>
-                      </td>
-                      <td>
-                        <%= moment(item.deadline).format(" DD MMM YYYY HH:mm")%>
-                      </td>
-                      <td>
-                        <a href="/users/edit/<%= item.id%> " class="btn btn-success "><i
-                            class="fa-solid fa-pencil"></i></a>&nbsp
-                        <a href="/users/delete/<%= item.id%>" class="btn btn-danger"
-                          onclick="return on(`<%= item.id%>` , `<%= item.title%>`)"><i class="fa-solid fa-trash"></i></a>
-
-                      </td>
-
-                    </tr>
-                    <% }}) %>
-            </tbody>
-          </table>
-        </div>
-        <div class="card-footer">
-          <a href="users/add">
-            <button class="btn btn-primary" type="button"><i class="fa-solid fa-plus"></i></button>
-          </a>
-          </div>
-        </div>
+                  <% }}) %>
+          </tbody>
+        </table>
+      </div>
+      <div class="card-footer">
+        <a href="users/add">
+          <button class="btn btn-primary" type="button"><i class="fa-solid fa-plus"></i></button>
+        </a>
       </div>
     </div>
-    </div>
-    </div>
-    <%- include('partials/delete-confirm')%>
-      </body>
-      <%- include('partials/footer')%>
+  </div>
+  </div>
+  </div>
+  </div>
+  <%- include('partials/delete-confirm')%>
+    </body>
+    <%- include('partials/footer')%>
